[package]
name = "ninja"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
toml = "0.8"
anyhow = "1.0" # 💡 packet.rs と path.rs のビルドエラーを解決するために追加

[[bin]]
name = "ninja"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"